# ChangeLog for app-portage/squashed-portage
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jul 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Fix broken live version

  22 Jul 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.16.ebuild,
  squashed-portage-9999.ebuild:
  Equalize versions

  07 Jul 2014; Johann Schmitz <ercpe@gentoo.org> -squashed-portage-0.11.ebuild,
  -squashed-portage-0.12.ebuild, -squashed-portage-0.13.ebuild,
  -squashed-portage-0.14.ebuild, -squashed-portage-0.15.1.ebuild,
  -squashed-portage-0.8.ebuild, -squashed-portage-0.9.ebuild,
  squashed-portage-0.16.ebuild:
  Dropped old version; removed dependency to python-argparse

  26 May 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Fix repo uri, thanks ercpe making it available

*squashed-portage-0.16 (14 May 2014)

  14 May 2014; Johann Schmitz <ercpe@gentoo.org> +squashed-portage-0.16.ebuild:
  Version bump with awesome features

*squashed-portage-0.15.1 (11 May 2014)

  11 May 2014; Johann Schmitz <ercpe@gentoo.org>
  +squashed-portage-0.15.1.ebuild:
  Version bump of squashed-portage

  21 Mar 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Depend on cacert in ca-certificates, #504776

*squashed-portage-0.14 (17 Mar 2014)

  17 Mar 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.14.ebuild:
  Version Bump

  04 Feb 2014; Justin Lecher <jlec@gentoo.org> Manifest:
  Update to new tarball

*squashed-portage-0.12 (27 Jan 2014)

  27 Jan 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.12.ebuild:
  Version BUmp

  21 Jan 2014; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.10.ebuild,
  +squashed-portage-0.11.ebuild, squashed-portage-9999.ebuild:
  Version bump, drop cachedir into runtime

*squashed-portage-0.10 (21 Jan 2014)

  21 Jan 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.10.ebuild:
  Version Bump
