@@ -1,1 +1,2 @@
 DIST squashed-portage-0.16.tar.xz 5364 SHA256 39de858ad75a5f370db463922b73bb3e1c622068e97ca2e76761ab7313bc40e6 SHA512 e113bc0d52c76fd6305c5459954ba0e5f5c36c5c40c10669dbc0f9e77e0ddc5560b634868a47af5b4263bdcc80c705f66a5eb562a98c7d1697a00ae19befa232 WHIRLPOOL 9757c41c8a422c081e2b5f4ca105b150863c3581567b38388b82770b796c284a337fa79fd32fec8c2c022a350e25dc2976ad1a12cb3e6b672a4aafdfb465fdbf
+DIST squashed-portage-0.17.tar.xz 5712 SHA256 0e605156acd066790cd6dad1e9508d85c271b90281c84c711d6df5572a880a64 SHA512 fc4ee8b9ec6ed3d7c86e5aa1745d0c9872a479a04374d92ba3fe5c2d9cd319bb62d3a013d3af3bdd99f2e0222759b39401c693ef3668ef5727aa438f8e0e34e3 WHIRLPOOL 2298779df97a072e8afc648b96c32ef6f454940cfac01e390d700aa7738f82ae5a291eca4ca7a72c6e2569c83fa9c1845852f9812660686fef32c2055382382d
