@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashed-portage-0.17 (16 Sep 2014)
+
+  16 Sep 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.17.ebuild,
+  squashed-portage-9999.ebuild:
+  Version Bump
+
   22 Jul 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
   Fix broken live version
 
